--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ members = [
     "examples/sqlite/getting_started_step_3",
     "examples/sqlite/relations",
     "examples/sqlite/wasm",
+    "temporary_basic_example",
     "xtask",
 ]
 
